Improved logging for Spotify script

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,24 +2,8 @@
 <html data-ng-app="home">
 <head>
   <% include ../partials/header.ejs %>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css"></script>
   <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-  <style type="text/css">
-    .jumbotron {
-      background: linear-gradient(rgba(10, 0, 0, 0.45), rgba(50, 0, 0, 0.45)), url('/img/jumbotron.jpg');
-    }
-    .playlist-form {
-      width: 400px;
-      margin: auto;
-    }
-    .playlist-form input {
-      padding: 22px 14px;
-      font-size: 22px;
-    }
-    .playlist-form a {
-      margin-top: 5px;
-      width: 100%;
-    }
-  </style>
   <script type="text/javascript" src="/scripts/index.js"></script>
   <script type="text/javascript" src="/scripts/parse.factory.js"></script>
   <script type="text/javascript" src="/scripts/location.js"></script>
