--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="/scripts/index.js"></script>
   <script type="text/javascript" src="/scripts/parse.factory.js"></script>
   <script type="text/javascript" src="/scripts/location.js"></script>
+  <script type="text/javascript" src="/scripts/debug.js"></script>
 </head>
 
 <body data-ng-controller="mainCtrl">
