--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -21,13 +21,13 @@
     <div class="col-md-6 latestTrips">
       <h3><span class="glyphicon glyphicon-pushpin"></span> Latest trips</h3>
       <ul class="list-group">
-        <li class="list-group-item" data-ng-repeat="t in trips">
-        <a data-ng-href="/history/{{t.objectId}}">
-          <b>From:</b> {{t.From}}<br />
-          <b>To:</b> {{t.To}}<br />
-          Collected {{t.Songs.length}} songs.
-        </a>
-        <span class="pull-right" style="font-size:12px;"><span class="glyphicon glyphicon-calendar"></span> {{t.createdAt | amDateFormat:'MMMM Do YYYY'}}</span>
+        <li class="list-group-item" data-ng-repeat="t in trips | orderBy:'-endedAt'" ng-click="navigateTo(t)" style="cursor:pointer;">
+          <span>
+            <b>From:</b> {{t.From}}<br />
+            <b>To:</b> {{t.To}}<br />
+            Collected {{t.Songs.length}} songs.
+          </span>
+          <span class="pull-right" style="font-size:12px;"><span class="glyphicon glyphicon-calendar"></span> {{t.createdAt | amDateFormat:'MMMM Do YYYY'}}</span>
         </li>
         <li class="list-group-item" style="background-color:#B01302;color:#fff;font-size:16px;" ng-show="trips.length == 0">
           <span class="glyphicon glyphicon-heart-empty"></span>
