--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html data-ng-app="guide">
 <head>
   <% include ../partials/header.ejs %>
   <link rel="stylesheet" type="text/css" href="/stylesheets/guide.css"></script>
+  <script type="text/javascript" src="/scripts/guide.js"></script>
 </head>
 
-<body data-ng-controller="tripCtrl">
+<body data-ng-controller="guideCtrl">
 
   <% include ../partials/nav.ejs %>
 
@@ -18,11 +19,7 @@
   <div class="row">
     <div class="col-md-12">
       <ul class="list-group">
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-play-circle"></span> <span>Start playing</span></h4><div class="guide-index pull-right">1</div><div class="guide-index pull-right">1</div></li>  
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-road"></span> <span>Start moving</span></h4><div class="guide-index pull-right">2</div></li>  
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-time"></span> <span>Songwalk pulls another song every 4 minutes based on your location</span></h4><div class="guide-index pull-right">3</div></li>
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-stop"></span> <span>Stop playing</span></h4><div class="guide-index pull-right">4</div></li>   
-        <li class="list-group-item"><h4><span class="glyphicon glyphicon-floppy-save"></span> <span>Your trip is stored together with your songs on the <a href="/history"/>History</a> page</span></h4><div class="guide-index pull-right">5</div></li>   
+        <li class="list-group-item" data-ng-repeat="g in guides"><h4><span class="glyphicon glyphicon-{{g.glyphicon}}"></span> <span>{{g.body}}</span></h4><div class="guide-index pull-right">1</div><div class="guide-index pull-right">{{$index+1}}</div></li>  
       </ul>
     </div>
   </div>
