--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,5 @@
 <title>Songwalk - A song based on your location</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
 <script type="text/javascript" src="/scripts/helpers.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
