--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,7 +2,7 @@
       background: linear-gradient(rgba(10, 0, 0, 0.45), rgba(50, 0, 0, 0.45)), url('/img/jumbotron.jpg');
     }
     .playlist-form {
-      width: 400px;
+      width: 80%;
       margin: auto;
     }
     .playlist-form input {
