--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,10 +21,7 @@
 
     <a class="col-xs-12 btn btn-link" href="/guide" style="color:#fff"><span class="glyphicon glyphicon-question-sign"></span> How does this work?</a>
 
-    <a data-ng-hide="spotify_userdata" href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-cloud"></span> Log in with Spotify</a>
-
-
-    <div data-ng-show="spotify_userdata && !playlist"  class="create-playlist-content col-xs-12">
+    <div data-ng-show="spotify_userdata && !playlist" class="create-playlist-content col-xs-12">
       <p>
         Want more songs in your favorite playlist? Enter its name and Songwalk will add songs to it!
         Or you could enter a whole new name and Songwalk will make a playlist for you from only the freshest ingredients.
@@ -37,12 +34,12 @@
       </div>
     </div>
   </div>
-
-  <a data-ng-show="spotify_userdata && playlist && !stopped" ng-click="stopAdding()" class="btn btn-lg btn-default">
-    <span class="glyphicon glyphicon-stop"></span> Stop adding songs
-  </a>
-
-  <a data-ng-show="spotify_userdata && playlist" class="btn btn-lg btn-default" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
+  
+  <div class="spotify-actions-content">
+    <a data-ng-hide="spotify_userdata" href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-cloud"></span> Log in with Spotify</a>
+    <a data-ng-show="spotify_userdata && playlist && !stopped" ng-click="stopAdding()" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-stop"></span> Stop adding songs</a>
+    <a data-ng-show="spotify_userdata && playlist" class="btn btn-lg btn-default" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
+  </div>
 
   <div id="go-again" data-ng-show="stopped" class="col-xs-12">
     <a class="btn btn-sm btn-default" ng-click="restart()">Go again?</a>
@@ -77,10 +74,5 @@
     </div>
   </div>
 </div>
-
-  <script id="embeded-player-template" type="text/x-handlebars-template">
-    <iframe src="https://embed.spotify.com/?uri=spotify:user:{{clientId}}:playlist:{{playlistId}}&theme=white" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-  </script>
-
 </body>
 </html>
