--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,6 +2,7 @@
       background: linear-gradient(rgba(10, 0, 0, 0.45), rgba(50, 0, 0, 0.45)), url('/img/jumbotron.jpg');
     }
     .playlist-form {
+      max-width: 500px;
       width: 80%;
       margin: auto;
     }
@@ -15,11 +16,16 @@
     }
     
     .spotify-actions-content {
-        width: 50%;
+        max-width: 400px;
+        width: 80%;
         margin: auto;
     }
     
     .spotify-actions-content a {
       margin-top: 5px;
-      width: 25%;
+      width: 100%;
+    }
+    
+    .container {
+        padding-bottom: 25px;
     }
