--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -48,7 +48,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12" data-ng-show="playlist">
-    <h3 class="col-xs-6"><span class="glyphicon glyphicon-music"></span> {{playlistName}}</h3>
+    <h3><span class="glyphicon glyphicon-music"></span> {{playlistName}}</h3>
     <div class="table-responsive">
       <table class="table striped">
         <thead>
