--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -39,10 +39,7 @@
     <a data-ng-hide="spotify_userdata" href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-cloud"></span> Log in with Spotify</a>
     <a data-ng-show="spotify_userdata && playlist && !stopped" ng-click="stopAdding()" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-stop"></span> Stop adding songs</a>
     <a data-ng-show="spotify_userdata && playlist" class="btn btn-lg btn-default" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
-  </div>
-
-  <div id="go-again" data-ng-show="stopped" class="col-xs-12">
-    <a class="btn btn-sm btn-default" ng-click="restart()">Go again?</a>
+    <a data-ng-show="stopped" data-ng-click="restart()" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-repeat"></span> Go again?</a>
   </div>
 </div>
 <div class="container">
