--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -38,28 +38,30 @@
     </div>
     <div class="col-md-5 col-xs-12">
       <h3><span class="glyphicon glyphicon-music"></span> Songs collected</h3>
-      <table class="table striped">        
-      <thead>
-        <tr>
-          <th></th>
-          <th></th>
-          <th></th>
-          <th>Artist</th>
-          <th>Title</th>
-          <th>Collected</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr data-ng-repeat="s in trip.Songs" data-ng-class="{ 'selected': selectedSong == $index }">
-          <td><a data-ng-href="{{trackLink(s)}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
-          <td><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 11)"><span class="glyphicon glyphicon-map-marker"></span></a></td>
-          <td><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 15)"><span class="glyphicon glyphicon-zoom-in"></span></a></td>
-          <td>{{s.Artist}}</td>
-          <td>{{s.Title}}</td>
-          <td>{{s.TimeAdded | amDateFormat:'MMM Do YYYY HH:mm'}}</td>
-        </tr>
-        </tbody>
-      </table> 
+      <div class="table-responsive">
+        <table class="table striped">        
+        <thead>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th>Artist</th>
+            <th>Title</th>
+            <th>Collected</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr data-ng-repeat="s in trip.Songs" data-ng-class="{ 'selected': selectedSong == $index }">
+            <td><a data-ng-href="{{trackLink(s)}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
+            <td><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 11)"><span class="glyphicon glyphicon-map-marker"></span></a></td>
+            <td><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 15)"><span class="glyphicon glyphicon-zoom-in"></span></a></td>
+            <td>{{s.Artist}}</td>
+            <td>{{s.Title}}</td>
+            <td>{{s.TimeAdded | amDateFormat:'MMM Do YYYY HH:mm'}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
       <button type="button" class="btn btn-success" style="width:100%;" data-ng-click="saveAsPlaylist()"> Save as playlist</button>
     </div>
   </div>
