--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -39,12 +39,10 @@
     <div class="col-md-5 col-xs-12">
       <h3><span class="glyphicon glyphicon-music"></span> Songs collected</h3>
       <div class="table-responsive">
-        <table class="table striped">        
-        <thead>
+        <table class="table striped" data-ng-init="toolbarVisible=true;">        
+        <thead style="cursor:pointer;" title="Click to hide toolbar" data-ng-click="toolbarVisible=!toolbarVisible;">
           <tr>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th colspan="3" data-ng-show="toolbarVisible"></th>
             <th>Artist</th>
             <th>Title</th>
             <th>Collected</th>
@@ -52,9 +50,9 @@
         </thead>
         <tbody>
           <tr data-ng-repeat="s in trip.Songs" data-ng-class="{ 'selected': selectedSong == $index }">
-            <td><a data-ng-href="{{trackLink(s)}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
-            <td><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 11)"><span class="glyphicon glyphicon-map-marker"></span></a></td>
-            <td><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 15)"><span class="glyphicon glyphicon-zoom-in"></span></a></td>
+            <td data-ng-show="toolbarVisible"><a data-ng-href="{{trackLink(s)}}"><span class="glyphicon glyphicon-play-circle"></span></a></td>
+            <td data-ng-show="toolbarVisible"><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 11)"><span class="glyphicon glyphicon-map-marker"></span></a></td>
+            <td data-ng-show="toolbarVisible"><a href="javascript:void(0)" data-ng-click="centerMapOnSong(s, 15)"><span class="glyphicon glyphicon-zoom-in"></span></a></td>
             <td>{{s.Artist}}</td>
             <td>{{s.Title}}</td>
             <td>{{s.TimeAdded | amDateFormat:'MMM Do YYYY HH:mm'}}</td>
