--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -15,6 +15,7 @@
 <div class="jumbotron text-center">
   <div class="container">
     <h1>Trip from {{trip.From}} to {{trip.To}}</h1>
+    <p>{{trip.createdAt | amDateFormat:'MMMM Do YYYY HH:mm'}}</p>
   </div>
 </div>
 <div class="container">
