--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -25,7 +25,7 @@
           <span>
             <b>From:</b> {{t.From}}<br />
             <b>To:</b> {{t.To}}<br />
-            Collected {{t.Songs.length}} songs.
+            <b>Songs collected:</b> {{t.Songs.length}}
           </span>
           <span class="pull-right" style="font-size:12px;">
             <div class="trip-date-container">
