--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,7 +36,7 @@
   </div>
   
   <div class="spotify-actions-content">
-    <a data-ng-hide="spotify_userdata" href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-cloud"></span> Log in with Spotify</a>
+    <a data-ng-hide="spotify_userdata" href="/login" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-log-in"></span> Log in with Spotify</a>
     <a data-ng-show="spotify_userdata && playlist && !stopped" ng-click="stopAdding()" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-stop"></span> Stop adding songs</a>
     <a data-ng-show="spotify_userdata && playlist" class="btn btn-lg btn-default" href="http://open.spotify.com/user/{{spotify_userdata.id}}/playlist/{{playlistId}}"><span class="glyphicon glyphicon-play-circle"></span> Open in Spotify</a>
     <a data-ng-show="stopped" data-ng-click="restart()" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-repeat"></span> Go again?</a>
