--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,7 +2,8 @@
 <html data-ng-app="home">
 <head>
   <% include ../partials/header.ejs %>
-  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css"></script>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/index.css"></link>
+  <link rel="stylesheet" type="text/css" href="/stylesheets/spinners.css"></link>
   <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
   <script type="text/javascript" src="/scripts/index.js"></script>
   <script type="text/javascript" src="/scripts/parse.factory.js"></script>
@@ -32,9 +33,11 @@
         </div>
         <a class=" btn btn-lg btn-default" ng-click="makePlaylist();">Make playlist</a>
       </div>
-       <p>
-        Adding your new playlist 
-      </p>
+      <div ng-show="makingPlaylist">
+        <span class="heartbeat-loader">
+        </span>
+        <span class="lead" style="padding-left: 5px;">Adding your new playlist...</span>
+      </div>
     </div>
   </div>
   
