--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -36,7 +36,7 @@
       <div ng-show="makingPlaylist">
         <span class="heartbeat-loader">
         </span>
-        <span class="lead" style="padding-left: 5px;">Adding your new playlist...</span>
+        <p style="padding-left: 5px;">Adding your new playlist...</p>
       </div>
     </div>
   </div>
