--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -34,7 +34,7 @@
         <a class=" btn btn-lg btn-default" ng-click="makePlaylist();">Make playlist</a>
       </div>
       <div ng-show="makingPlaylist">
-        <span class="heartbeat-loader">
+        <span class="{{spinner}}">
         </span>
         <p style="padding-left: 5px;">Adding your new playlist...</p>
       </div>
