--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -31,7 +31,7 @@
         <div class="input-group col-xs-12">
           <input type="text" class="form-control" placeholder="Songwalk" ng-model="playlistName" aria-label="Enter desired playlist name">
         </div>
-        <a class=" btn btn-lg btn-default" ng-click="makePlaylist();">Make playlist</a>
+        <a class="btn btn-lg btn-success" ng-click="makePlaylist();"><span class="glyphicon glyphicon-music"></span> Make playlist</a>
       </div>
       <div ng-show="makingPlaylist">
         <span class="{{spinner}}">
