--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -15,7 +15,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="row">
+  <div class="row guide">
     <div class="col-xs-12">
       <ul class="list-group">
         <li class="list-group-item">
@@ -66,13 +66,7 @@
       </ul>
     </div>
   </div>
-  <div class="row brands">
-    <div class="col-xs-12">
-      <a href="http://what3words.com/"><img class="col-xs-6" src="/img/what3words.png" alt="What3Words logo. Songwalk was built using What3Words." /></a>
-      <a href="https://www.spotify.com/"><img class="col-xs-6" src="/img/spotify.png" alt="Spotify logo. Songwalk was built using Spotify." /></a>
-    </div>
-  </div>
-  <div class="row">
+  <div class="row explanation">
       <div class="col-xs-12">
           <h3>Wait, so how does this work?</h3>
           <p>
@@ -83,6 +77,12 @@
             Songwalk uses those words to search for songs in Spotify. The highest-ranking song that Spotify finds is added to your playlist.
           </p>
           <p>Each place has its own song. Where's yours?</p>
+      </div>
+  </div>
+  <div class="row brands">
+      <div class="col-xs-12">
+          <a href="http://what3words.com/"><img class="col-xs-6" src="/img/what3words.png" alt="What3Words logo. Songwalk was built using What3Words." /></a>
+          <a href="https://www.spotify.com/"><img class="col-xs-6" src="/img/spotify.png" alt="Spotify logo. Songwalk was built using Spotify." /></a>
       </div>
   </div>
 </div>
