A few words on how it was made

--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -74,9 +74,26 @@
           </p>
           <p>
             What3Words maps the world as a grid of 3 by 3 meter squares where each square is given three unique words that identify it.
-            Songwalk uses those words to search for songs in Spotify. The highest-ranking song that Spotify finds is added to your playlist.
+            Songwalk uses your position to get the three words that belong to it from What3Words, and then searches for songs in
+            Spotify using those words. The highest-ranking song that Spotify finds is added to your playlist.
           </p>
           <p>Each place has its own song. Where's yours?</p>
+      </div>
+      <div class="col-xs-12">
+          <h3>No, I mean <i>how was it made</i>?</h3>
+          <p>
+          Songwalk was made in 24 hours at the Netlight Hackathon - PAD THAI by Ole Martin Pettersen, Olav Hermansen,
+                  and William Killerud - also known as Team Putekrig.
+          </p>
+          <p>
+              The source code can be found on <a href="https://github.com/olemp/nl-hackathon-putekrig">Github</a>.
+              Songwalk was built using a mix of Express.js, AngularJS, jQuery, and Handlebars, as
+              well as a dash of Bootstrap. The code is pretty messy in places, which is what
+              happens when trying to put together pieces from three different projects with three slightly different
+              stacks. But hey, it works!
+          </p>
+          <p>Songwalk is hosted on <a href="https://www.heroku.com">Heroku</a>, with the user history data living over at <a href="https://parse.com">Parse</a></p>
+
       </div>
   </div>
   <div class="row brands">
