Max height on song list on trip page

--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -39,7 +39,7 @@
     </div>
     <div class="col-md-5 col-xs-12">
       <h3><span class="glyphicon glyphicon-music"></span> Songs collected</h3>
-      <div class="table-responsive">
+      <div class="table-responsive" style="max-height: 622px;">
         <table class="table striped" data-ng-init="toolbarVisible=true;">        
         <thead style="cursor:pointer;" title="Click to hide toolbar" data-ng-click="toolbarVisible=!toolbarVisible;">
           <tr>
