Removed unused angular stuff that interferred with guide page

--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html data-ng-app="guide">
+<html>
 <head>
   <% include ../partials/header.ejs %>
   <link rel="stylesheet" type="text/css" href="/stylesheets/guide.css"></script>
 </head>
 
-<body data-ng-controller="guideCtrl">
+<body>
 
   <% include ../partials/nav.ejs %>
 
