--- a/views/pages/trip.ejs
+++ b/views/pages/trip.ejs
@@ -3,7 +3,7 @@
 <head>
   <% include ../partials/header.ejs %>
   <link rel="stylesheet" type="text/css" href="/stylesheets/trip.css"></script>
-  <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+  <script src='//maps.googleapis.com/maps/api/js'></script>
   <script type="text/javascript" src="/scripts/trip.js"></script>
   <script type="text/javascript" src="/scripts/parse.factory.js"></script>
 </head>
