--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,6 +11,7 @@
 <script src='/scripts/angular-google-maps.min.js'></script>
 <script src='/scripts/moment.min.js'></script>
 <script src='/scripts/angular-moment.min.js'></script>
+<script type="text/javascript" src="/scripts/equalizer.js"></script>
 <script type="text/javascript" src="/scripts/spotify.js"></script>
 <script type="text/javascript" src="/scripts/w3w.js"></script>
 <script type="text/javascript" src="/scripts/nav.js"></script>
