Added demo section

--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -79,6 +79,14 @@
           </p>
           <p>Each place has its own song. Where's yours?</p>
       </div>
+
+
+      <div class="col-xs-12 demo-video">
+        <div class="col-xs-6 col-xs-offset-3">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/R1lyam1noZ4" frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
       <div class="col-xs-12">
           <h3>No, I mean <i>how was it made</i>?</h3>
           <p>
@@ -96,6 +104,7 @@
 
       </div>
   </div>
+
   <div class="row brands">
       <div class="col-xs-12">
           <a href="http://what3words.com/"><img class="col-xs-6" src="/img/what3words.png" alt="What3Words logo. Songwalk was built using What3Words." /></a>
