--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -49,7 +49,7 @@
     <a data-ng-show="stopped" data-ng-click="restart()" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-repeat"></span> Go again?</a>
   </div>
 
-  <div class="equalizer-animation col-md-12 col-xs-12">
+  <!--<div class="equalizer-animation col-md-12 col-xs-12">
     <div class="equaliser-container">
       <ol class="equaliser-column">
         <li class="colour-bar"></li>
@@ -75,7 +75,7 @@
         <li class="led-mask"></li>
         <li class="led-mask"></li>
       </ol>
-    </div>
+    </div>-->
 
   </div>
 </div>
