--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -50,33 +50,10 @@
   </div>
 
   <div class="row" data-ng-show="spotify_userdata && playlist && !stopped">
-    <div class="equalizer-animation col-md-12 col-xs-12">
-      <div class="equaliser-container">
-        <ol class="equaliser-column">
-          <li class="colour-bar"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-          <li class="led-mask"></li>
-        </ol>
-      </div>
+    <div>
+      <span class="{{spinner_watching}}">
+      </span>
+      <p style="padding-left: 5px;">Watching your location - adding new songs as you go</p>
     </div>
   </div>
 </div>
