Changed glyphicon for guide

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,7 +8,7 @@
         <a href="/history"><span class="glyphicon glyphicon-calendar"></span> History</a>
       </li>
       <li>
-        <a href="/guide"><span class="glyphicon glyphicon-cog"></span> How Songwalk Works</a>
+        <a href="/guide"><span class="glyphicon glyphicon-info-sign"></span> How Songwalk Works</a>
       </li>
     </ul>
   </div>
