--- a/views/pages/guide.ejs
+++ b/views/pages/guide.ejs
@@ -11,7 +11,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <h1><span class="glyphicon glyphicon-cog"></span> How Songwalk works</h1>
+    <h1><span class="glyphicon glyphicon-info-sign"></span> How Songwalk works</h1>
   </div>
 </div>
 <div class="container">
