Glyph music icon as logo frontpage

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,6 +18,9 @@
 
 <div class="jumbotron text-center">
   <div class="container">
+    <div style="font-size:80px;margin-bottom:-20px;">
+      <span class="glyphicon glyphicon-music"></span>
+    </div>
     <h1>Songwalk</h1>
     <p>Build playlists based on your location</p>
 
