Fixed logo @ history page

--- a/views/pages/history.ejs
+++ b/views/pages/history.ejs
@@ -13,7 +13,7 @@
 
 <div class="jumbotron text-center">
   <div class="container">
-    <h1 ng-show="trips"><span class="glyphicon glyphicon-signal"></span> History</h1>
+    <h1 ng-show="trips"><span class="glyphicon glyphicon-calendar"></span> History</h1>
     <div ng-hide="trips">
       <span class="{{spinner}}">
       </span>
