--- a/public/stylesheets/history.css
+++ b/public/stylesheets/history.css
@@ -31,7 +31,9 @@
 	height: 100%;
 	background-color: #559999;
 	color: #fff;
+	min-width: 105px;
+    text-align: right;
 }
 .songs-count-container .value {
-	font-size: 225%;
+	font-size: 400%;
 }
